Constrain author avatar to 200px to prevent sidebar overflow

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -153,7 +153,8 @@
   }
 
   img {
-    max-width: 400px;
+    max-width: 200px;
+    width: 100%;
 
     @include breakpoint($large) {
       padding: 5px;
